# circuit-intermediate-format-converter

./: .gitignore  README.md  logs.txt  main.py  pyproject.toml
docs/: circuit_intermediate_format.schema.json  sample.kicad_sch  target_format_sample.json  target_intermediate_format_sample.json  target_intermediate_format_sample.json5  target_json_schema.json
src/cifconv/: bus.py  bus_entry.py  cifconv_eval.py  cifconv_token.py  cli.py  expr.py  junction.py  kicad_schematic_tokenizer.py  label.py  net.py  no_connect.py  pin.py  pin_instance.py  point.py  read_expr.py  schema.py  symbol.py  symbol_inst.py  symbol_instance.py  wire.py
tests/: test_eval.py  test_kicad_schematic_tokenizer.py  test_read_expr.py
