[project]
name = "circuit-intermediate-format-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json5>=0.13.0",
    "loguru>=0.7.3",
]

[project.scripts]
cifconv = "cifconv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.0.2",
]
